--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <meta charset="UTF-8">
     <title>Train Time</title>
 
-  	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7' crossorigin='anonymous'>
-  	<link rel="stylesheet" type="text/css" href="assets\css\style.css"> 
-	
-
-	    <!-- Firebase Reference -->
-    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-
-    <!-- Moment.js Reference -->
-    <!-- <script src="http://momentjs.com/downloads/moment.js"></script>   -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    
   
   </head>
 
@@ -40,7 +37,7 @@
               <h3 class="panel-title"><strong>Current Train Schedule</strong></h3>
             </div>
             <div class="panel-body">
-              <table class="table table-hover" id='employee-table'>
+              <table class="table table-hover" id='train-table'>
                 <thead>
                   <tr>
                     <th>Train Name</th>
@@ -66,22 +63,22 @@
               <!-- Entry Form -->
               <form>
                 <div class="form-group">
-                  <label for="employee-name-input">Train Name</label>
-                  <input class="form-control" id="employee-name-input" type="text">
+                  <label for="train-name-input">Train Name</label>
+                  <input class="form-control" id="train-name-input" type="text">
                 </div>
                 <div class="form-group">
-                  <label for="role-input">Destination</label>
-                  <input class="form-control" id="role-input" type="text">
+                  <label for="destination-input">Destination</label>
+                  <input class="form-control" id="destination-input" type="text">
                 </div>
                 <div class="form-group">
-                  <label for="start-input">Frist Train Time (HH:mm - military time))</label>
-                  <input class="form-control" id="start-input" type="text">
+                  <label for="first-time-train-input">First Train Time (HH:mm - military time))</label>
+                  <input class="form-control" id="first-time-input" type="text">
                 </div>
                 <div class="form-group">
-                  <label for="rate-input">Frequency (min)</label>
-                  <input class="form-control" id="rate-input" type="text">
+                  <label for="frequency-input">Frequency (min)</label>
+                  <input class="form-control" id="frequency-input" type="text">
                 </div>
-                <button class="btn btn-primary" id="add-employee-btn" type="submit">Submit</button>
+                <button class="btn btn-primary" id="add-train-btn" type="submit">Submit</button>
               </form>
 
             </div>
@@ -97,6 +94,6 @@
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
 
-	<script src="assets/javascript/app.js"></script>
+	<script src="assets/javascript/TrainSchedule.js"></script>
 </body>
 </html>
