--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <title>Train Time</title>
 
+  <!--libraries or links for bootstrap, jquery, firebase, moment.js, and style sheets-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -18,20 +19,16 @@
 
   <body>
   
+      <!-- put everything in one container-->
     <div class="container">
 
-      <!-- Jumbotron -->
       <div class="jumbotron">
         <h1 class="text-center">Anytime is Train Time</h1>
         <h3 class="text-center">Choo Choo. Choo Choo.</h3>
       </div>
-
-
+        <!--Train schedule table section-->
       <div class="row">
-
         <div class="col-lg-12">
-
-        <!-- Current Employees-->
           <div class="panel panel-primary">
             <div class="panel-heading">
               <h3 class="panel-title"><strong>Current Train Schedule</strong></h3>
@@ -53,14 +50,13 @@
             </div>
           </div>
 
-          <!-- Add Employee  -->
+       <!-- Section to add new trains-->
           <div class="panel panel-primary">
             <div class="panel-heading">
               <h3 class="panel-title"><strong>Add Train</strong></h3>
             </div>
             <div class="panel-body">
-
-              <!-- Entry Form -->
+              <!-- Entry Form for new train data input-->
               <form>
                 <div class="form-group">
                   <label for="train-name-input">Train Name</label>
@@ -92,8 +88,9 @@
     </div>
 </script>
 
+
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.js"></script>
 
-	<script src="assets/javascript/TrainSchedule.js"></script>
+	<script src="assets/javascript/trainSchedule.js"></script>
 </body>
 </html>
